# otelcol-integrator-operator

./: .gitignore  CONTRIBUTING.md  README.md  charmcraft.yaml  pyproject.toml  tox.ini
.github/: .jira_sync_config.yaml
lib/charms/otelcol_integrator/v0/: otelcol_integrator.py
src/: charm.py  constants.py  otelcol_integrator.py  secret_manager.py  secrets.py
tests/integration/: conftest.py  test_charm.py
tests/unit/: conftest.py  test_charm.py  test_otelcol_integrator_lib.py  test_secret_manager.py  test_secrets.py
